src/liquid/components/ld-select/ld-select.css
/* ... */
.ld-select__btn-trigger {
  overflow: hidden;
}

:where(.ld-select),
:where(.ld-select) > select {
  min-height: var(--ld-select-min-height-md);
}

:where(.ld-select--sm),
:where(.ld-select--sm) > select {
  min-height: var(--ld-select-min-height-sm);
}

:where(.ld-select--lg),
:where(.ld-select--lg) > select {
  min-height: var(--ld-select-min-height-lg);
}

.ld-select--sm > select,
.ld-select--sm .ld-select__btn-trigger {
  padding: var(--ld-select-padding-y-sm) var(--ld-select-padding-x-sm);
}

.ld-select--lg > select,
.ld-select--lg .ld-select__btn-trigger {
  padding: var(--ld-select-padding-y-lg) var(--ld-select-padding-x-lg);
}

.ld-select--ghost {
  &:not(ld-select),
  select,
  .ld-select__btn-trigger {
    background-color: transparent;
  }

  select,
  .ld-select__btn-trigger {
    &:not(:focus) {
      box-shadow: none;
    }
  }
}

.ld-select:where(:not(.ld-select--ghost)) {
  &:where(.ld-select--detached),
  &:where(:not(.ld-select--detached):not(.ld-select--expanded)) {
    :where(select),
    :where(.ld-select__btn-trigger) {
      box-shadow: inset 0 0 0 var(--ld-sp-2) var(--ld-select-col-border);
    }
  }

  &:where(:not(.ld-select--invalid)) {
    select,
    .ld-select__btn-trigger {
      &:where(.ld-select__btn-trigger--detached:not(:disabled):not([aria-disabled='true'])),
      &:where(:not(:disabled):not([aria-disabled='true']):not(.ld-select__btn-trigger--detached):not([aria-expanded='true'])) {
        @media (hover: hover) {
          &:hover:not(:focus:focus-visible) {
            box-shadow: inset 0 0 0 var(--ld-sp-2)
              var(--ld-select-col-border-hover);
          }
        }
      }
    }
  }
}

.ld-select--invalid > select,
.ld-select--invalid .ld-select__btn-trigger--invalid {
  &:where(:not(:disabled)) {
    &:where(:focus:focus-visible) {
      box-shadow: inset 0 0 0 var(--ld-sp-2) var(--ld-select-invalid-col);
    }
  }

  &:where(:not(:disabled):not([aria-disabled='true'])) {
    &:where(:not(:focus:focus-visible)) {
      background-color: var(--ld-select-invalid-disabled-bg-col);
      color: var(--ld-select-invalid-col);
    }

    &:where(:not(.ld-select__btn-trigger--ghost)) {
      box-shadow: inset 0 0 0 var(--ld-sp-2) var(--ld-select-invalid-col);
    }

    + .ld-icon,
    + .ld-select__icon,
    .ld-select__icon {
      color: var(--ld-select-invalid-col);
    }

    @media (hover: hover) {
      &:hover {
        box-shadow: inset 0 0 0 var(--ld-sp-2) var(--ld-select-invalid-col);

        + .ld-icon,
        + .ld-select__icon,
        .ld-select__icon,
        ::slotted(ld-icon) {
          color: var(--ld-select-invalid-icon-col-hover);
        }
      }
    }
    &:where(:focus:focus-visible) {
      + .ld-icon,
      + .ld-select__icon,
      .ld-select__icon,
      ::slotted(ld-icon) {
        color: var(--ld-select-invalid-icon-col-focus);
      }
    }
    &:where(:active),
    &:where(:active:focus-visible) {
      + .ld-icon,
      + .ld-select__icon,
      .ld-select__icon,
      ::slotted(ld-icon) {
        color: var(--ld-select-invalid-icon-col-active);
      }
    }
  }
}

.ld-select__btn-trigger-text-wrapper,
.ld-select__selection-list {
  flex-grow: 1;
}

.ld-select__btn-trigger-text-wrapper {
  font: var(--ld-typo-label-m);
  line-height: var(--ld-select-trigger-line-height);
  padding: var(--ld-sp-6) var(--ld-sp-8) var(--ld-sp-6) 0;
  height: calc(100% + var(--ld-sp-12));
  margin: calc(-1 * var(--ld-sp-6)) 0;
  display: flex;
  align-items: center;
  overflow: hidden;
}

.ld-select--sm > select,
.ld-select--sm .ld-select__btn-trigger-text-wrapper {
  font: var(--ld-typo-body-s);
  line-height: var(--ld-select-trigger-line-height);
}
.ld-select--lg > select,
.ld-select--lg .ld-select__btn-trigger-text-wrapper {
  font: var(--ld-typo-body-l);
  line-height: var(--ld-select-trigger-line-height);
}

.ld-select > select,
.ld-select__btn-trigger-text,
.ld-select__selection-label-text {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.ld-select__selection-list {
  display: flex;
  flex-wrap: wrap;
  margin: 0 var(--ld-sp-4) calc(-1 * var(--ld-sp-4)) 0;
  overflow: hidden;
  padding: 0;
}

.ld-select__selection-list-item {
  flex: 0 1;
  margin-right: var(--ld-sp-4);
  margin-bottom: var(--ld-sp-4);
  width: 100%;
}

.ld-select__selection-list-item--overflowing {
  display: none;
}

.ld-select__selection-list-more {
  order: 2147483647; /* Highest possible */
  height: 100%;
  display: inline-flex;
  align-items: center;
  font: var(--ld-typo-label-s);
  font-weight: 700;
  padding: var(--ld-sp-4) var(--ld-sp-6);
  border-radius: var(--ld-br-m);
  margin-right: var(--ld-sp-4);
  margin-bottom: var(--ld-sp-4);
}

.ld-select__btn-clear-single,
.ld-select__btn-clear {
  /*outline: none;*/
  border: 0;
  padding: 0;
  border-radius: var(--ld-br-full);
  user-select: none;
  touch-action: manipulation;
  background-color: transparent;
  line-height: 0;
  -webkit-touch-callout: none;

  &:not(:disabled) {
    cursor: pointer;
  }
}

.ld-select__btn-clear {
  margin-right: var(--ld-sp-6);
  flex-shrink: 0;

  &:disabled {
    color: var(--ld-select-col-disabled);
  }
}

.ld-select__btn-clear-single {
  z-index: 1;
  margin-left: var(--ld-sp-6);
}

.ld-select__selection-label {
  position: relative;
  width: 100%;
  display: inline-flex;
  align-items: center;
  color: var(--ld-select-selection-col);
  font: var(--ld-typo-label-s);
  font-weight: 700;
  padding: var(--ld-sp-4) var(--ld-sp-6);
}

.ld-select__selection-label-bg {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: var(--ld-br-m);

  :where(.ld-select__btn-trigger[aria-disabled='true']) & {
    background-color: var(--ld-select-col-disabled);
  }
}

.ld-select__selection-label-text {
  z-index: 1;
}

.ld-select__btn-clear-single-icon {
  --ld-select-btn-clear-single-size: 0.75rem;
  width: var(--ld-select-btn-clear-single-size);
  height: var(--ld-select-btn-clear-single-size);
}
/* ... */

